# openSorcery

./: .gitmodules  BlockAllocate.c  BlockAllocate.h  CMakeLists.txt  HashTable.c  HashTable.h  README.md  build_windows.bat  client.c  generateSerialization.c  generate_code_gcc.sh  generated_serialize.c  generated_serialize_client.h  generated_serialize_server.h  globalTypes.ds  server.c
include/: BlockAllocate.h  generated_serialize_client.h  generated_serialize_server.h  types.h
src/: client.c  globalTypes.ds  server.c  tabletest.c  types.h
